# TCGA-Tools

./: .gitmodules  README.md  install_gdc.sh  pyproject.toml  shark_run.sh  tcga_tools.py
manifests/: gdc_manifest.tcga_blca.txt  gdc_manifest.tcga_gbm.txt  gdc_manifest.tcga_hnsc.txt  gdc_manifest.tcga_lgg.txt  gdc_manifest.tcga_ov.txt  gdc_manifest.tcga_prad.txt  gdc_manifest.tcga_skcm.txt  gdc_manifest.tcga_stad.txt  gdc_manifest.tcga_thca.txt  gdc_manifest.tcga_ucec.txt
raw_annotations/: clinical.project-tcga-blca.json  clinical.project-tcga-coad.json  clinical.project-tcga-lusc.json  clinical.project-tcga-prad.json  clinical.project-tcga-stad.json  clinical.project-tcga-thca.json
tcga_tools/: __init__.py  __main__.py  analytics.py  annotations.py  api.py  config.py  datasets.py  downloader.py  filters.py  grouping.py  pathology.py  ports.py  utils.py
tcga_tools/adapters/: __init__.py  gdc_api_wrapper.py  gdc_metadata.py  tcia_api_wrapper.py
tcga_tools/services/: __init__.py  tcga_pathology.py  tcia_pathology.py
tests/: offline_test.py  online_test.py  test_annotations_matrix.py  test_tcga_pathology_service.py  test_tcia_portal.py
