[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcga-tools"
version = "0.1.0"
description = "A Python toolkit for downloading and analyzing TCGA datasets with clinical, molecular, and diagnostic annotations."
authors = [
  { name="S Brussee", email="S.Brussee@lumc.nl" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

dependencies = [
  "requests>=2.28",
  "tqdm>=4.65",
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.7"
]

[project.urls]
"Homepage" = "https://github.com/LUMCPathAI/TCGA-Tools"
"Bug Tracker" = "https://github.com/LUMCPathAI/TCGA-Tools/issues"

[tool.setuptools]
packages = ["tcga_tools"]

[tool.setuptools.package-data]
"tcga_tools" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
